# rss_reader

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  SHORTCUTS.md  TEST_COVERAGE_ANALYSIS.md  config.sample.toml  rustling-swimming-quail.md  sources.txt
docs/: README.md  SKILLS_INSTALL.md  USER_GUIDE.md  aaa.md  build_promt.md  vibe.txt
migrations/001-initial/: up.sql
migrations/002-reading-workflow/: up.sql
migrations/003-search-index/: up.sql
migrations/004-auth-profiles/: up.sql
migrations/005-refresh-runs/: up.sql
plans/: latest-refresh-page-layout-plan.md  latest-refresh-page-layout-tasks.md  rss-reader-growth-auth-plan.md  zesty-dancing-stardust.md
rivulet/: .gitignore  Cargo.toml  README.md  config.sample.toml
rivulet/.cargo/: config.toml
rivulet/doc/: INSTALL.md
rivulet/docs/: scheduling.md  scraper.md  user-guide.md
rivulet/src/: daemon.rs  lib.rs  main.rs
rivulet/src/app/: context.rs  error.rs  mod.rs
rivulet/src/cli/: commands.rs  mod.rs
rivulet/src/config/: colors.rs  keybindings.rs  mod.rs
rivulet/src/domain/: mod.rs
rivulet/src/fetcher/: http_fetcher.rs  mod.rs  parallel.rs
rivulet/src/normalizer/: mod.rs
rivulet/src/scraper/: background.rs  chrome.rs  config.rs  extractor.rs
rivulet/src/store/: mod.rs  sqlite.rs
rivulet/src/tui/: app.rs  event.rs  layout.rs  mod.rs
skills/rivulet-auth-profiles/: SKILL.md
skills/rivulet-reading-workflow/: SKILL.md
skills/rivulet-release-verify/: SKILL.md
skills/rivulet-search-index/: SKILL.md
src/: daemon.rs  main.rs
src/app/: context.rs  error.rs
src/cli/: commands.rs  mod.rs
src/config/: keybindings.rs  mod.rs
src/domain/: auth.rs  feed.rs  item.rs  mod.rs  state.rs
src/fetcher/: mod.rs  parallel.rs
src/normalizer/: mod.rs
src/scraper/: background.rs  (+4 more)
tests/: tui_e2e.rs
(+27 files in other folders)
