[package]
name = "rivulet"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["gzip", "brotli"] }
feed-rs = "2.3"
rusqlite = "0.32"
rusqlite_migration = "1.3"
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
thiserror = "2.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
html-escape = "0.2"
open = "5"
dirs = "5"
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
futures = "0.3"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.14"
tokio-test = "0.4"
